ShellService, ProcessOutputHandler & LogWriter testing complete